--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,8 @@
 
 body {
   margin: 0;
-  background-color: #221f1f;
+  background-color: rgb(25, 45, 52);
   font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 
@@ -32,4 +30,8 @@ img {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
 }
